# error-message-translator

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  app.py  index.html  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_selenium_tests.sh  run_tests.sh  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  python-tests.yml
app/: __init__.py  translator.py
app/data/: error_patterns.py  error_patterns_backup.py
app/data/patterns/: README.md  __init__.py  base_pattern.py
app/data/patterns/css/: __init__.py  validation_errors.py
app/data/patterns/general/: __init__.py  common_errors.py
app/data/patterns/html/: __init__.py  validation_errors.py
app/data/patterns/java/: __init__.py  compilation_errors.py  runtime_exceptions.py
app/data/patterns/javascript/: __init__.py  reference_errors.py  syntax_errors.py  type_errors.py
app/data/patterns/python/: __init__.py  name_errors.py  syntax_errors.py  type_errors.py
app/static/css/: styles.css
app/static/js/: main.js  main.py  script.js
app/templates/: index.html
scripts/: add_patterns.py
static-version/css/: styles.css
static-version/js/: main.js
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py  test_app.py  test_recent_searches.py  test_theme_toggle.py
tests/unit/: __init__.py  test_error_patterns.py  test_frontend.py  test_translator.py
(+3 files in other folders)
